# nosql-lab

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  vulns.md
backend/: Dockerfile
backend/src/: main.py
backend/src/common/: auth.py  database.py
backend/src/models/: Post.py  PyObjectId.py  User.py
backend/src/routers/: posts.py  users.py
frontend/: Dockerfile
frontend/src/: App.js
frontend/src/components/: Feed.js  Login.js  PostDetails.js  Register.js  SearchPosts.js  User.js
frontend/src/styles/: Feed.css  Login.css  PostDetails.css  Register.css  SearchPosts.css  User.css
src/: main.py
src/common/: database.py
src/models/: Post.py  PyObjectId.py  User.py
src/routers/: users.py
