[tool.poetry]
package-mode = false
name = "nosql"
version = "0.1.0"
description = ""
authors = ["Guillem Reig <guillem.reig@flywire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic = "^2.9.2"
pymongo = "4.9"
motor = "^3.6.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
